2008-07-21 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: fixed error when subtitle was nil.

2008-07-21 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* squeeze.rb: fix #117. thx Kazuhiko.

2008-07-11 TADA Tadashi <sho@spc.gr.jp>
	* title_tag.rb: changed title format to start with day title.

2008-07-10 TADA Tadashi <sho@spc.gr.jp>
	* category.rb: sorted categories in case-insensitive.

2008-07-05 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* category.rb: raise 404 error when bot access to no existent diary.

2008-07-04 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* counter.rb: fix indent.

2008-07-02 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* squeeze.rb: changed module TDiary to TOPLEVEL.

2008-07-02 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: fixed over deleting category name from title. thanks for
	TAKAHASHI Tamotsu.

2008-06-18 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tlink.rb: convert to toutf8 instead of toeuc.

2008-06-18 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* a.rb: add utf8 option.

2008-06-17 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* title_tag.rb, ja/search_form.rb: convert to utf-8 instead of euc-jp.
	
2008-05-12 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* navi_user.rb: fix indent.
	
2008-05-12 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* makerss.rb: tabify.
	
2008-04-29 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* category.rb: fixed #79.
	
2008-02-29 TADA Tadashi <sho@spc.gr.jp>
	* release 2.2.1.

2008-02-28 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: fixed bad numeric entiries value.

2008-02-25 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: replaced character entities to numeric. 

2008-01-24 TADA Tadashi <sho@spc.gr.jp>
	* */hide-mail-field.rb: added notice to rewite TSUKKOMI information.

2008-01-23 TADA Tadashi <sho@spc.gr.jp>
	* */makerss.rb: change some labels on edit page.

2008-01-19 zunda <zunda at freeshell.org>
	* weather.rb, */weather.rb: modified so that weather can be shown at right
	of title